--- a/frontend/src/app/layout/header/header.component.html
+++ b/frontend/src/app/layout/header/header.component.html
@@ -19,7 +19,7 @@
         </li>
 
         <li class="menu-item" routerLinkActive="current-menu-item">
-          <a href="#">Resume</a>
+          <a routerLink="/resume">Resume</a>
         </li>
 
         <li class="menu-item" routerLinkActive="current-menu-item">
@@ -27,11 +27,11 @@
         </li>
 
         <li class="menu-item" routerLinkActive="current-menu-item">
-          <a href="#">Blog</a>
+          <a routerLink="/blog">Blog</a>
         </li>
 
         <li class="menu-item" routerLinkActive="current-menu-item">
-          <a href="#">Contact</a>
+          <a routerLink="/contact">Contact</a>
         </li>
       </ul>
     </div>
