--- a/frontend/src/app/portfolio/portfolio-list/portfolio-list.component.html
+++ b/frontend/src/app/portfolio/portfolio-list/portfolio-list.component.html
@@ -1,4 +1,4 @@
-<div class="portfolio-grid two-columns">
+<div class="portfolio-grid three-columns">
   <app-portfolio-thumbnail
     *ngFor="let portfolio of portfolios"
     [portfolio]="portfolio"></app-portfolio-thumbnail>
