--- a/frontend/src/app/portfolio/portfolio-detail/portfolio-detail.component.css
+++ b/frontend/src/app/portfolio/portfolio-detail/portfolio-detail.component.css
@@ -1,7 +1,22 @@
-.embed-responsive {
-  height: auto;
-}
-
 a:not([href]) {
   cursor: pointer;
+}
+
+#carousel-row {
+  display: block;
+}
+
+#carousel-row .col-md-8 {
+  width: 66.66666667%;
+  float: left;
+}
+
+#carousel-row .col-md-4 {
+  width: 33.33333333%;
+  float: left;
+}
+
+#carousel-row .col-sm-12 {
+  width: 100%;
+  float: left;
 }
