--- a/frontend/src/app/resume/resume.component.html
+++ b/frontend/src/app/resume/resume.component.html
@@ -1,1 +1,17 @@
-<h2 class="text-center">Resume Page</h2>
+<div id="main" class="site-main">
+  <div id="main-content" class="single-page-content">
+    <div id="primary" class="content-area">
+
+      <div class="page-title">
+        <h1>Resume</h1>
+        <div class="page-subtitle">
+          <h4>4+ Years of Professional Experience</h4>
+        </div>
+      </div>
+
+      <div id="content" class="page-content site-content single-post" role="main">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </div>
+</div>
