Add spinners to the resume page

--- a/frontend/src/app/blog/blog.component.html
+++ b/frontend/src/app/blog/blog.component.html
@@ -10,6 +10,10 @@
       </div>
 
       <div id="content" class="page-content site-content single-post" role="main">
+
+        <app-spinner widthPercent="20" height="400"></app-spinner>
+
+
         <router-outlet></router-outlet>
       </div>
     </div>
