--- a/frontend/src/app/resume/resume.component.css
+++ b/frontend/src/app/resume/resume.component.css
@@ -1,3 +1,10 @@
 .certificate-item:hover {
   cursor: pointer;
 }
+
+
+@media (max-width: 576px) {
+  .skill-item:not(:last-child) {
+    margin-bottom: 25px;
+  }
+}
