--- a/frontend/src/app/about/about.component.html
+++ b/frontend/src/app/about/about.component.html
@@ -270,107 +270,8 @@
           </div>
         </div>
 
-        <div class="row">
-          <div class=" col-xs-12 col-sm-6 ">
-            <div class="block-title">
-              <h2>Design Skills</h2>
-            </div>
-
-            <div id="skills_1" class="skills-info skills-first-style">
-              <!-- Skill 1 -->
-              <div class="clearfix">
-                <h4>UI/UX Design</h4>
-                <div class="skill-value">95%</div>
-              </div>
-
-              <div id="skill_1" data-value="95" class="skill-container">
-                <div class="skill-percentage"></div>
-              </div>
-              <!-- /Skill 1 -->
-
-              <!-- Skill 2 -->
-              <div class="clearfix">
-                <h4>Print Design</h4>
-                <div class="skill-value">75%</div>
-              </div>
-
-              <div id="skill_2" data-value="75" class="skill-container">
-                <div class="skill-percentage"></div>
-              </div>
-              <!-- /Skill 2 -->
-
-              <!-- Skill 3 -->
-              <div class="clearfix">
-                <h4>Graphic Design</h4>
-                <div class="skill-value">85%</div>
-              </div>
-              <div id="skill_3" data-value="85" class="skill-container">
-                <div class="skill-percentage"></div>
-              </div>
-              <!-- Skill 3 -->
-
-              <!-- Skill 4 -->
-              <div class="clearfix">
-                <h4>Logo Design</h4>
-                <div class="skill-value">90%</div>
-              </div>
-              <div id="skill_4" data-value="90" class="skill-container">
-                <div class="skill-percentage"></div>
-              </div>
-              <!-- /Skill 4 -->
-            </div>
-          </div>
-
-
-          <div class=" col-xs-12 col-sm-6 ">
-            <div class="block-title">
-              <h2>Coding Skills</h2>
-            </div>
-
-            <div id="skills_2" class="skills-info skills-first-style">
-              <!-- Skill 5 -->
-              <div class="clearfix">
-                <h4>HTML / CSS</h4>
-                <div class="skill-value">100%</div>
-              </div>
-              <div id="skill_5" data-value="100" class="skill-container">
-                <div class="skill-percentage"></div>
-              </div>
-              <!-- /Skill 5 -->
-
-              <!-- Skill 6 -->
-              <div class="clearfix">
-                <h4>PHP</h4>
-                <div class="skill-value">90%</div>
-              </div>
-              <div id="skill_6" data-value="90" class="skill-container">
-                <div class="skill-percentage"></div>
-              </div>
-              <!-- /Skill 6 -->
-
-              <!-- Skill 7 -->
-              <div class="clearfix">
-                <h4>JavaScript</h4>
-                <div class="skill-value">90%</div>
-              </div>
-              <div id="skill_7" data-value="90" class="skill-container">
-                <div class="skill-percentage"></div>
-              </div>
-              <!-- /Skill 7 -->
-
-              <!-- Skill 8 -->
-              <div class="clearfix">
-                <h4>Smarty / Twig</h4>
-                <div class="skill-value">85%</div>
-              </div>
-              <div id="skill_8" data-value="85" class="skill-container">
-                <div class="skill-percentage"></div>
-              </div>
-              <!-- /Skill 8 -->
-            </div>
-          </div>
-        </div>
-
+        <!-- Skills -->
+        <app-skills></app-skills>
       </div>
     </div>
   </div>
