Connect the Angular portfolio app to Django backend API

--- a/frontend/src/app/layout/header/header.component.html
+++ b/frontend/src/app/layout/header/header.component.html
@@ -23,7 +23,7 @@
         </li>
 
         <li class="menu-item" routerLinkActive="current-menu-item">
-          <a routerLink="/portfolios">Portfolio</a>
+          <a routerLink="/portfolio">Portfolio</a>
         </li>
 
         <li class="menu-item" routerLinkActive="current-menu-item">
