--- a/frontend/src/app/portfolio/project-detail/project-detail.component.html
+++ b/frontend/src/app/portfolio/project-detail/project-detail.component.html
@@ -14,7 +14,7 @@
       </div>
 
       <div class="col-md-8 col-sm-12 order-md-1">
-        <h2>{{ portfolio.title }}</h2>
+        <h2>{{ project.name }}</h2>
       </div>
     </div>
 
