--- a/frontend/src/app/portfolio/project-detail/project-detail.component.html
+++ b/frontend/src/app/portfolio/project-detail/project-detail.component.html
@@ -4,8 +4,8 @@
       <div class="col-md-4 col-sm-12 order-md-2">
         <div class="ajax-page-nav">
           <div class="nav-item ajax-page-prev-next">
-            <a href="#"><i class="lnr lnr-chevron-left"></i></a>&nbsp;
-            <a href="#"><i class="lnr lnr-chevron-right"></i></a>
+            <a (click)="onPrevious()"><i class="lnr lnr-chevron-left"></i></a>&nbsp;
+            <a (click)="onNext()"><i class="lnr lnr-chevron-right"></i></a>
           </div>
           <div class="nav-item ajax-page-close-button">
             <a (click)="onClose()"><i class="lnr lnr-cross"></i></a>
